<resources>
    <string name="app_name">Classical Quiz</string>

    <!-- THESE ARE STRINGS WE"LL USE IN THE .JAVA FILE FOR EASE OF ACCESS-->
    <string name="score_summary_name">Name: </string>




    <!-- QUESTIONS START HERE-->

            <!-- QUESTIONS FOR THE HEALTH CATEGORY-->
    <string name="quiz_one_question">What is the main nutrient in Cashews?</string>
    <string name="q1_1">A. Copper</string>
    <string name="q1_2">B. Phosphorus</string>
    <string name="q1_3">C. Magnesium</string>

    <string name="quiz_two_question"> ________ is an ancient superfood that has 5 times the calcium as milk and has twice the protein more than any other grain or seed. </string>
    <string name="q2_1">A. Quinoa</string>
    <string name="q2_2">B. Lentils</string>
    <string name="q2_3">C. Chia seeds</string>

    <string name="quiz_three_question">______ helps control your sleep and wake cycles. </string>
    <string name="q3_1">A. Tryptophan</string>
    <string name="q3_2">B. Melatonin</string>
    <string name="q3_3">C. Serotonin</string>

    <string name="quiz_four_question">What is the main ingredient in yogurt ? </string>
    <string name="q4_1">A. Milk</string>

    <string name="quiz_five_question">What is the name of the first toothpaste ever made ? </string>
    <string name="q5_1">A. Maclean</string>
    <string name="q5_2">B. Crème Dentifrice</string> <!-- true-->
    <string name="q5_3">C. Tooth Polish</string>



      <!-- QUESTIONS FOR THE SCIENCE CATEGORY-->
    <string name="science_quiz_one_question">Dry ice is a frozen form of which gas?</string>
    <string name="qs1_1">A. Nitrous oxide</string>
    <string name="qs1_2">B. Sulfur hexafluoride </string>
    <string name="qs1_3">C. Carbon dioxide gas</string>

    <string name="science_quiz_two_question"> The ________ is the brightest Star in Earths night sky. </string>
    <string name="qs2_1">A. Dog Star</string>
    <string name="qs2_2">B. Barnards Star</string>
    <string name="qs2_3">C. Epsilon Eridani </string>

    <string name="science_quiz_three_question"> Who invented the Telescope in 1609, this great inventor also developed and improved the Compass? </string>
    <string name="qs3_1">A. Leonardo da Vinci</string>
    <string name="qs3_2">B. Galileo Galilei</string>
    <string name="qs3_3">C. Joseph Priestley </string>

    <string name="science_quiz_four_question">  _______ invented the periodic table. </string>
    <string name="qs4_1">A. Dmitri Mendeleev</string>


    <string name="science_quiz_five_question">  Who invented the petri dish? </string>
    <string name="qs5_1">A. Dmitri Mendeleev Petri</string>
    <string name="qs5_2">B. Petri Simon Blaise</string>
    <string name="qs5_3">C. Julius Richard Petri </string>  <!-- true-->



    <!-- QUESTIONS FOR THE TECHNOLOGY CATEGORY-->
    <string name="technology_quiz_one_question">Who invented the World Wide Web?</string>
    <string name="qt1_1">A. Vint Cerf</string>
    <string name="qt1_2">B. Tim Berners-Lee</string>
    <string name="qt1_3">C. Robert Elliot Kahn</string>

    <string name="technology_quiz_two_question"> ________ was the first commercial computer produced. </string>
    <string name="qt2_1">A. COMPUMAC 1 </string>
    <string name="qt2_2">B. UNIVAC 1 </string>
    <string name="qt2_3">C. ENIAC 1 </string>

    <string name="technology_quiz_three_question"> Who successfully designed, built and  flew the first airplane? </string>
    <string name="qt3_1">A. Orville and Wilbur Wright</string>
    <string name="qt3_2">B. James Watt</string>
    <string name="qt3_3">C. Joseph and Jacques Montgolfier</string>

    <string name="technology_quiz_four_question"> ______ invented the printing press.  </string>
    <string name="qt4_1">A. Johannes Gutenburg</string>

    <string name="technology_quiz_five_question"> ______ invented the calculator</string>
    <string name="qt5_1">A. Isaac Newton</string>
    <string name="qt5_2">B. Blaise Pascal</string>  <!-- true-->
    <string name="qt5_3">C. Johannes Kepler</string>


        <!-- QUESTIONS FOR THE MUSIC CATEGORY-->
    <string name="music_quiz_one_question">Who invented the Viola Organista?</string>
    <string name="qm1_1">A. Slawomir Zubrzycki</string>
    <string name="qm1_2">B. Wolfgang Amadeus</string>
    <string name="qm1_3">C. Leonardo da Vinci</string>

    <string name="music_quiz_two_question"> On the 1st of August exactly at 12:01 am, the first ever 24-hour video Music channel was launched. Which year was this and which was the first music video that was played?  </string>
    <string name="qm2_1">A. 1981, Video Killed the Radio Star by The Buggles</string>
    <string name="qm2_2">B. 1985, On TV by The Buggles</string>
    <string name="qm2_3">C. 1991, Living in The Plastic Age by The Buggles</string>

    <string name="music_quiz_three_question"> The ________ is a musical instrument that produces rich sounds, with a keyboard that controls 61 bowed strings. </string>
    <string name="qm3_1">A. Classical Accordion </string>
    <string name="qm3_2">B. Harpsichord</string>
    <string name="qm3_3">C. Wheelharp</string>

    <string name="music_quiz_four_question"> Which Classical artist did Einstein see as a musical physicist? </string>
    <string name="qm4_1">A. Beethoven</string>
    <string name="qm4_2">B. Joseph Haydn</string>
    <string name="qm4_3">C. Mozart</string>
    <string name="qm4_4">D. Sebastian Bach</string>

    <string name="music_quiz_five_question"> Who wrote the Religious classic "Messiah" in 1741? </string>
    <string name="qm5_1">A. Wolfgang Amadeus Mozart </string>
    <string name="qm5_2">B. Johann Sebestian Bach</string>
    <string name="qm5_3">C. George Frideric Handel</string><!-- true-->



    <string name="hint"> Answer </string>


    <!-- FINAL RESULTS -->
    <string name="congrats">\n Congratulations on Completing the Quiz\n \n</string>
    <string name="scoreStat"> \n \t Here Are Your Quiz Results \n\nOverall Percentage: \n</string>
    <string name="correct_answers">Correct answers: \n</string>
    <string name="incorrect_answers">Incorrect answers: \n</string>

    <string name="name_required">Enter Name</string>
    <string name="genius">You are a Genius!</string>
    <string name="amateur">You Did Okay.... Want to try your luck Again?</string>
    <string name="bad">Better luck next time... Press Retry for another go</string>



    <!-- SHARE -->
    <string name="share_title">Share your Geography Quiz results!</string>
    <string name="share_text_hey">Hey! I\'m </string>
    <string name="share_text_results"> and these are my Classical Quiz results: </string>
    <string name="share_text_bye">Ok, bye!</string>
    <string name="music">music</string>
    <string name="technology">technology </string>

</resources>
