<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.junior.maduna.classicalquiz.Music">

    <!-- Question 1 -->
    <ScrollView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="visible">
        <!-- Make question one visible to the user and make the rest gone(not visible) -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/violaorganista" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/music_quiz_one_question"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/mradioGroupOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/qm1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm1_1" />

                <RadioButton
                    android:id="@+id/qm1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm1_2" />

                <RadioButton
                    android:id="@+id/qm1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="correct"
                    android:text="@string/qm1_3" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/black"
                android:onClick="questionTwo"
                android:text="Next"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <!-- Question 2 -->
    <ScrollView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="gone">
        <!-- Here we hide the scrollview because we only the user to see one question at a time -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/videocam" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/music_quiz_two_question"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/mradioGroupTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/qm2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="correct"
                    android:text="@string/qm2_1" />

                <RadioButton
                    android:id="@+id/qm2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm2_2" />

                <RadioButton
                    android:id="@+id/qm2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm2_3" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/black"
                android:onClick="questionThree"
                android:text="Next"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>


    <!-- Question 3 -->
    <ScrollView
        android:id="@+id/question5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="gone">
        <!-- Here we hide the scrollview because we only the user to see one question at a time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/wheelharp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/music_quiz_three_question"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/mradioGroupThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/qm3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm3_1" />

                <RadioButton
                    android:id="@+id/q3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qm3_2" />

                <RadioButton
                    android:id="@+id/qm3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="correct"
                    android:text="@string/qm3_3" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/black"
                android:onClick="scoreDisplay"
                android:text="Submit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <!-- Question 4 -->
    <ScrollView
        android:id="@+id/question4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="gone">
        <!-- Here we hide the scrollview because we only the user to see one question at a time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/mozart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/music_quiz_four_question"
                android:textColor="@color/colorPrimary" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="7dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/qm4_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:text="@string/qm4_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:text="@string/qm4_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/qm4_4" />

                </LinearLayout>
            </ScrollView>

            <EditText
                android:id="@+id/musician"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="textCapWords" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/black"
                android:onClick="scoreDisplay"
                android:text="Submit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <!-- Question 5 -->
    <ScrollView
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="gone">
        <!-- Here we hide the scrollview because we only the user to see one question at a time -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/handel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/music_quiz_five_question"
                android:textColor="@color/colorPrimary" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qm5_1"
                android:id="@+id/musicBox1"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_2"
                android:id="@+id/musicBox2"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qm5_3"
                android:id="@+id/musicBox3"
                android:checked="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/black"
                android:onClick="questionFour"
                android:text="Next"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>


    <!-- Score screen -->
    <ScrollView
        android:id="@+id/musicScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bacground"
        android:visibility="gone">

        <!-- Here we hide the scrollview because we only the user to see one question at a time -->

        <LinearLayout
            android:id="@+id/scoreBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mscore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#8FFF"
                    android:gravity="center"
                    android:text="@string/scoreStat"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:hint="@string/name_required"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="25dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btnUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:background="#8FFF"
                    android:backgroundTint="@android:color/white"
                    android:gravity="center"
                    android:onClick="openScoreACt"
                    android:text="Submit"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnReplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:background="#8FFF"
                    android:backgroundTint="@android:color/white"
                    android:gravity="center"
                    android:onClick="replayGame"
                    android:text="Replay"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:background="#8FFF"
                    android:backgroundTint="@android:color/white"
                    android:gravity="center"
                    android:onClick="openScoreACt"
                    android:text="Share"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
